Project

General

Profile

Actions

Bug #34536

closed

"rbd import --export-format 2" fails when the input is a pipe

Added by Jason Dillaman over 5 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

$ rbd export --export-format 2 lun0 - | rbd import --export-format 2 - lun1
rbd: import header failed.
Importing image: 0% complete...failed.
rbd: import failed: (22) Invalid argument
Exporting image: 0% complete...failed.
rbd: export error: (32) Broken pipe

vs

$ rbd export --export-format 2 lun0 dump
Exporting image: 100% complete...done.
$ rbd import --export-format 2 dump lun1
Importing image: 100% complete...done.

Related issues 2 (0 open2 closed)

Copied to rbd - Backport #35704: luminous: "rbd import --export-format 2" fails when the input is a pipeResolvedPrashant DActions
Copied to rbd - Backport #35705: mimic: "rbd import --export-format 2" fails when the input is a pipeResolvedPrashant DActions
Actions #2

Updated by Jason Dillaman over 5 years ago

  • Status changed from New to Pending Backport
Actions #3

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #35704: luminous: "rbd import --export-format 2" fails when the input is a pipe added
Actions #4

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #35705: mimic: "rbd import --export-format 2" fails when the input is a pipe added
Actions #5

Updated by Nathan Cutler over 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF