rbd: fix error import when the input is a pipe

Fixes: http://tracker.ceph.com/issues/34536

Signed-off-by: songweibin <song.weibin@zte.com.cn>
(cherry picked from commit 3168d21629eb4d33f95dbd9399225e3e3817dc4f)